--- a/assets/WebViews/LyricsCard.html
+++ b/assets/WebViews/LyricsCard.html
@@ -2,13 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta  viewport>
     <title></title>
+
+    <style media="screen">
+      img {
+        height: 60%;
+        width: 90%;
+      }
+      div:nth-child(2)
+    </style>
   </head>
   <body>
-    <h1>Hello Web View</h1>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <h1></h1>
+    <div id="card-container">
+    <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/avatars/fd/fda14057081dfd6ca4b4715960b70f377dbb6bb2_full.jpg" alt="">
+    <p  id="bar" editable>I am the est in this business what aboutayou</p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script lang ="text/javascript">
-    alert("hello world")
+
     </script>
   </body>
 </html>
