don't remeber, top fan presentation

--- a/assets/WebViews/LyricsCard.html
+++ b/assets/WebViews/LyricsCard.html
@@ -1,27 +1,76 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+`<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta  viewport>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 
     <style media="screen">
       img {
-        height: 60%;
-        width: 90%;
+        height: 70%;
+        width: 100%;
       }
-      div:nth-child(2)
+     #card-container {
+       position: relative;
+       width: 95%;
+       background-color: blue
+     }
+     #bar-container {
+
+     }
+     #bar {
+       position: absolute;
+       bottom: 20px;
+       padding: 5px;
+       max-width: 60%;
+       text-align: left;
+       font-size: 25px;
+       margin-left: 10px;
+       font-weight: bold;
+       text-shadow: 0 0 10px blue
+     }
+     textarea {
+       position: absolute;
+       opacity: 0.1
+     }
+     #ii {
+       position: relative
+     }
+     #footer {
+       display:flex;
+
+     }
+     #footer p{
+       margin-left: 10px;
+     }
     </style>
   </head>
   <body>
-    <h1></h1>
+    <center>
     <div id="card-container">
+    <div id="ii">
     <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/avatars/fd/fda14057081dfd6ca4b4715960b70f377dbb6bb2_full.jpg" alt="">
-    <p  id="bar" editable>I am the est in this business what aboutayou</p>
+    <div id="bar-container">
+    <p  id="bar" contentEditable="true"></p>
+    <textarea rows="8" cols="80" onchange="updateBar()">
+      I am the est in this business what aboutayou
+    </textarea>
     </div>
+    </div>
+    <div id = "footer">
+    <p>Artist Name</p>
+    <p>SongTitle </p>
+    </div>
+    </div>
+    </center>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script lang ="text/javascript">
 
+     function updateBar(e) {
+       let bar = document.querySelector("#bar")
+       bar.innerText = e.target.value
+     }
     </script>
   </body>
 </html>
+`
